smiteproject/SmiteAPI.css
:root {
  font-size: 62.5%;
  --white: white;
  --grey: #999;
  --dark: #05111e;
  --blue: #164b83;
  --lightblue: #257cda;
  --red: #f56954;
  --yellow: #ffae00;
  --gold: #ada176;
  --assassin: #e6d200;
  --guardian: #008f07;
  --hunter: #f86530;
  --mage: #8b008f;
  --warrior: #ff2935;
  --norse: #074b7c;
  --norse-active: #074b7c;
  --greek: #652d8f;
  --greek-active: #652d8f;
  --maya: #056839;
  --maya-active: #056839;
  --chinese: #e52330;
  --chinese-active: #e52330;
  --hindu: #d91b5c;
  --hindu-active: #d91b5c;
  --egyptian: #603813;
  --egyptian-active: #603813;
  --roman: #e0b359;
  --roman-active: #e0b359;
  --japanese: #ed1f24;
  --japanese-active: #ed1f24;
  --celtic: #10592e;
  --celtic-active: #10592e;
  --slavic: #efaf1b;
  --great-old-ones: blue;
  --babylonian: red;
  --arthurian: green;
 /*--slavic-ative: #;
 */
  --voodoo: #fff;
 /*--voodoo-active: #;
 */
  --polynesian: #29dccd;
 /*--polynesian-active: #;
 */
 --melee: black;
 --ranged: white;
 --physical: black;
 --ranged: white;

  font-family: 'Montserrat', sans-serif; 

  overflow-x: hidden;
}
:root::-webkit-scrollbar {
  display: none;
}
* {
  box-sizing: border-box;
}
/* Starry Sky background */
body {
  background: linear-gradient(to left, #05111e 0%, black 100%);
}
#sky {
  width: 100vw;
  height: 100vh;
  position: fixed;
  overflow: hidden;
  margin: 0;
  padding: 0;
}
#shootingstars {
  margin: 0;
  padding: 0;
  width: 150vh;
  height: 100vw;
  position: fixed;
  overflow: hidden;
  transform: translatex(calc(50vw - 50%)) translatey(calc(50vh - 50%)) rotate(120deg);
}
.wish {
  height: 2px;
  top: 300px;
  width: 100px;
  margin: 0;
  opacity: 0;
  padding: 0;
  background-color: white;
  position: absolute;
  background: linear-gradient(-45deg, white, rgba(0, 0, 255, 0));
  filter: drop-shadow(0 0 6px white);
  overflow: hidden;
}
#background {
  display: block!important;
  visibility: visible!important;
  position: fixed!important;
}
/* end of starry background*/
header {
  text-align: center;
  font-family: 'Aboreto', cursive;
  font-size: 4rem;
  text-shadow: 0.1rem 0.1rem 1rem var(--gold), -0.1rem 0.1rem 1rem var(--gold);
  color: white;
}
.navbar {
  overflow: hidden;
  padding:0%;
  vertical-align: middle;
}
.navbar-nav {
  display: inline-block;
  float: none;
  vertical-align: top;
  text-align: center;
}
.navbar a {
  display: inline-block;
  text-align: center;
  font-size: 2rem;
  padding: 1rem;
}
a.navbar.nav-item.active {
  display: inline-block;
  text-align: center;
  font-size: 2rem;
  border-bottom: white solid;
}
.navbar a:hover {
  background-color: var(--gold);
  color: white;
  border-bottom: none;
  padding: 1rem;
}
.navbar-img {
  height:5rem;
  vertical-align: middle;
  float:left;
  margin-right: -18rem;
  margin-top: 1.2rem;
}
img, svg {
  display: block;
}
a:link, a:visited {
  text-decoration: none;
  color: white;
}
.menu {
  margin-left: -1rem;
}
footer {
  text-align: center;
}
.active {
  border-bottom: white solid;
}
.container {
  display: flex;
  flex-wrap: wrap;
  margin: -0.5rem;
}
.item {
  margin: 0.5rem;
  background: #f3edd6;
  border: 0.3rem;
  color: #b59214;
  padding: 3rem;
  font-size: 2rem;
  text-align: center;
}
.buffer {
  padding: 1rem;
}
/* Card grid */
.band {
  width: 90%;
  max-width: 1240px;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: auto;
  grid-gap: 2rem;
}
.main-item {
  grid-column: 1/ span 2;
}
.main-item h1 {
  font-size: 3rem;
}
/* card */
.card {
  min-height: 100%;
  background: white;
  box-shadow: 0 0.2rem 0.5rem rgba(0,0,0,0.1);
  display: flex;
  flex-direction: column;
  text-decoration: none;
  color: #444;
  position: relative;
  top: 0;
  transition: all .1s ease-in;
  --bs-card-border-radius: 0;
}
.card .thumb {
  /*padding-bottom: 60%;*/
  background-size: cover;
  background-position: center center;
}
.top-card .card .thumb {
  padding-bottom: 60%;
}
.bottom-card .card .thumb {
  padding-top: 45%;
}
.god-card {
  background: white;
  box-shadow: 0 0.2rem 0.5rem black;
  box-shadow: inset 0 0 2rem var(--gold);
  display: flex;
  flex-direction: row;
  text-decoration: none;
  color: #444;
  position: relative;
  top: 0;
  transition: all .1s ease-in;
  --bs-card-border-radius: 0;
}
.card:hover, .god-card:hover {
  top: -0.2rem;
  box-shadow: 0 0 2rem var(--gold);
  transform: scale(1.05);
}
.card article {
  padding:2rem;
  display: flex;
  flex: 1;
  justify-content: space-between;
  flex-direction: column;
}
.god-card article {
  display: flex;
  flex: 1;
  justify-content: space-between;
  flex-direction: column;
}
.card p {
  flex: 1;
 /* make p grow to fill available space*/
  line-height: 1.4;
}
/* typography */
h1 {
  font-size: 2rem;
  margin: 0;
  color: #333;
}
.card span {
  font-size: 1.2rem;
  font-weight: bold;
  color: #999;
  text-transform: uppercase;
  letter-spacing: 0.05rem;
  margin: 0.2rem 0 0 0;
}
/* God Grid */
.band-god {
  width: 90%;
  max-width: 1240px;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: auto;
  grid-gap: 1rem;
}
  .new.god-class { 
    grid-column: 1/ span 2;
    grid-row: 1/ span 2;
  }
  .new > .god-card, .new > .god-card > .god-thumb {
    height: 21rem;
  }
  .new > div > article > h1 {
    font-size: 4rem;
  }
  .new > div > article > span {
    font-size: 2rem;
  }
  .new > div > div.god-thumb-icon > svg {
    height: 4rem;
    width: 4rem;
    background-size: 4rem;
    margin: 1rem;
  }
.assassin > .card {
  --bs-card-border-color: var(--assassin);
}
.guardian > .card {
  --bs-card-border-color: var(--guardian);
}
.hunter > .card {
  --bs-card-border-color: var(--hunter);
}
.mage > .card {
  --bs-card-border-color: var(--mage);
}
.warrior > .card {
  --bs-card-border-color: var(--warrior);
}
.thumb, .god-thumb {
  height: 10rem;
  width: auto;
  display: block; /* I hope that this means the parent element is clickable - so the entire card */
}
.god-thumb-text {
  padding: 1rem;
  display: block; /* I hope that this means the parent element is clickable - so the entire card */
}
.hover-underline.assassin:after {
  background-color: var(--assassin);
}
.hover-underline.guardian:after {
  background-color: var(--guardian);
}
.hover-underline.hunter:after {
  background-color: var(--hunter);
}
.hover-underline.mage:after {
  background-color: var(--mage);
}
.hover-underline.warrior:after {
  background-color: var(--warrior);
}
.god-thumb-text > span {
  font-size: 1rem;
}
svg[class^="icon-"] {
  background-size: 2rem 2rem;
  width: 2rem;
  height: 2rem;
  margin: 0.4rem;
}
.icon-assassin {
  background-image: url(Images/icons/icon-assassin.svg);
}
.icon-assassin.c {
  background-image: url(Images/icons-coloured/icon-assassin.svg)
}
.icon-guardian {
  background-image: url(Images/icons/icon-guardian.svg);
}
.icon-guardian.c {
  background-image: url(Images/icons-coloured/icon-guardian.svg)
}
.icon-hunter {
  background-image: url(Images/icons/icon-hunter.svg);
}
.icon-hunter.c {
  background-image: url(Images/icons-coloured/icon-hunter.svg)
}
.icon-mage {
  background-image: url(Images/icons/icon-mage.svg);
}
.icon-mage.c {
  background-image: url(Images/icons-coloured/icon-mage.svg)
}
.icon-warrior {
  background-image: url(Images/icons/icon-warrior.svg);
}
.icon-warrior.c {
  background-image: url(Images/icons-coloured/icon-warrior.svg)
}
.icon-norse {
  background-image: url(Images/icons/icon-norse.svg);
}
.icon-norse.c {
  background-image: url(Images/icons-coloured/icon-norse.svg)
}
.icon-greek {
  background-image: url(Images/icons/icon-greek.svg);
}
.icon-greek.c {
  background-image: url(Images/icons-coloured/icon-greek.svg)
}
.icon-maya {
  background-image: url(Images/icons/icon-maya.svg);
}
.icon-maya.c {
  background-image: url(Images/icons-coloured/icon-maya.svg)
}
.icon-chinese {
  background-image: url(Images/icons/icon-chinese.svg);
}
.icon-chinese.c {
  background-image: url(Images/icons-coloured/icon-chinese.svg)
}
.icon-hindu {
  background-image: url(Images/icons/icon-hindu.svg);
}
.icon-hindu.c {
  background-image: url(Images/icons-coloured/icon-hindu.svg)
}
.icon-egyptian {
  background-image: url(Images/icons/icon-egyptian.svg);
}
.icon-egyptian.c {
  background-image: url(Images/icons-coloured/icon-egyptian.svg)
}
.icon-roman {
  background-image: url(Images/icons/icon-roman.svg);
}
.icon-roman.c {
  background-image: url(Images/icons-coloured/icon-roman.svg)
}
.icon-japanese {
  background-image: url(Images/icons/icon-japanese.svg);
}
.icon-japanese.c {
  background-image: url(Images/icons-coloured/icon-japanese.svg)
}
.icon-celtic {
  background-image: url(Images/icons/icon-celtic.svg);
}
.icon-celtic.c {
  background-image: url(Images/icons-coloured/icon-celtic.svg)
}
.icon-slavic {
  background-image: url(Images/icons/icon-slavic.svg);
}
.icon-slavic.c {
  background-image: url(Images/icons-coloured/icon-slavic.svg)
}
.icon-voodoo {
  background-image: url(Images/icons/icon-voodoo.svg);
}
.icon-voodoo.c {
  background-image: url(Images/icons-coloured/icon-voodoo.svg)
}
.icon-polynesian {
  background-image: url(Images/icons/icon-polynesian.svg);
}
.icon-polynesian.c {
  background-image: url(Images/icons-coloured/icon-polynesian.svg)
}
.icon-great-old-ones {
  background-image: url(Images/icons/icon-great-old-ones.png);
}
.icon-babylonian {
  background-image: url(Images/icons/icon-babylonian.png);
}
.icon-arthurian {
  background-image: url(Images/icons/icon-arthurian.png);
}
.icon-yoruba {
  background-image: url(Images/icons/icon-yoruba.png);
}
.icon-melee {
  background-image: url(Images/icons/icon-melee.svg);
}
.icon-ranged {
  background-image: url(Images/icons/icon-ranged.svg);
}
.icon-physical {
  background-image: url(Images/icons/icon-physical.svg);
}
.icon-magical {
  background-image: url(Images/icons/icon-magical.svg);
}
rect {
  width: 100%;
  height: 100%;
  opacity: 0%;
}

